# MyGObase

./: .gitignore  Makefile  README.md  pyproject.toml
mygobase/: Untitled.ipynb  __init__.py  datatypes.py  db.py  embedding.py  entity_embedd.py  extract_storyboard.py  frame_diff.ipynb  graph.py  label_role.ipynb  model.py  ner.py  ner_embedd.py  rag.py  summarizer.py  understand.py
mygobase/llmtools/: embedding.py  er.py  strategy.py  summarizer.py
