[project]
name = "mygobase"
version = "0.1.0"
description = ""
authors = [{ name = "DPR", email = "dpr-0xff@pm.me" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "mypy (>=1.14.1,<2.0.0)",
    "ruff (>=0.9.3,<0.10.0)",
    "janus @ git+ssh://git@github.com/deepseek-ai/Janus.git",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "ass (>=0.5.4,<0.6.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["transformers.*", "janus.*", "ffmpeg.*"]
ignore_missing_imports = true

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
