[project]
name = "mygobase"
version = "0.1.0"
description = ""
authors = [{ name = "DPR", email = "dpr-0xff@pm.me" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "ass (>=0.5.4,<0.6.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "polars (>=1.21.0,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "sqlite-vec (>=0.1.6,<0.2.0)",
    "openai (>=1.61.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "networkx[default] (>=3.4.2,<4.0.0)",
    "janus @ git+ssh://git@github.com/deepseek-ai/Janus.git",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "janus.*",
    "ffmpeg.*",
    "networkx.*",
    "sqlite_vec.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
